src/browser/extensions/chrome/css/theme-default.css
/* ... */
.sd-dismissal-option:active {
  background-color: #92dff9;
}

.sd-dismissal-dismissing,
.sd-dismissal-dismissing:hover {
  background-color: #0b9dcc;
  border-color: #75bfe5;
  color: white;
}

.sd-dismissal-brief {
  overflow: hidden;
  margin: 0;
  font-size: 14px;
  font-weight: bold;
  text-overflow: ellipsis;
  text-shadow: 1px 1px 1px #276688;
}

/* Droppable elements */
.sd-droppable {
  border: 2px dashed gray;
}

.sd-droppable-highlight {
  border: 2px dashed gray;
}

.sd-droppable-hover {
  border: 2px dotted gray !important;
  background-color: #fce4e4 !important;
}

/* Button: dismiss */
#sd-button-dismiss {
  display: none;
  position: absolute;
  z-index: -1;
  border: 2px solid #C5A2A2;
  background-color: #F8EAEA;
  clear: both;
  font-size: 20px;
  color: #900;
  padding: 5px;
  width: 28px;
  text-align: center;
  border-radius: 19px;
  box-shadow: 1px 1px 2px 0 rgba(50, 50, 50, 0.75);
  text-shadow: 1px 1px 2px rgba(150, 150, 150, 1);
  transition: all 175ms;
  cursor: pointer;
  line-height: 25px;
  top: 33px;
  right: -25px;
}

#sd-button-dismiss SPAN {
  position: relative;
}

#sd-button-dismiss.sd-droppable-hover {
  background-color: #C04343;
  border-color: #7A4747;
  color: #FFF5F5;
}


/* Common styling to Label Browser and similar components */
.sd-container.sd-component {
  top: 100px;
  left: 100px;
  opacity: 0;
  display: block;
  width: 400px;
  height: 400px;
  background-color: white;
  border: 5px solid silver;
  border-radius: 15px;
  transform: scale(0.2,0.2);
  transition: transform 300ms ease-in-out, opacity 150ms ease-in;

  /* box-shadow */
  -webkit-box-shadow: 5px 5px 5px 0px rgba(0,0,0,0.4);
  -moz-box-shadow: 5px 5px 5px 0px rgba(0,0,0,0.4);
  box-shadow: 5px 5px 5px 0px rgba(0,0,0,0.4);
}

.sd-header, .sd-footer {
  position: relative;

  padding: 10px 5px 8px 5px;
  margin: 0;

  border: 1px solid #dbdbdb;

  color: #333;
  background-color: #e5e4ef;
  background: linear-gradient(to bottom, rgba(232,232,235,1) 0%, rgba(204,202,204,1) 59%, rgba(212,210,212,1) 100%);
  text-shadow: 1px 1px 2px #aaa;
}

.sd-header {
  border-bottom-color: #aaa;
}

.sd-footer {
  border-top-color: #aaa;
}

.sd-footer {
  position: fixed;
  bottom: 0px;
  width: 100%;
}

.sd-header-title,
.sd-footer-title {
  font-size: 16px;
  font-weight: bold;
  font-family: arial,sans-serif;
  line-height: 16px;
  text-overflow: ellipsis;
  overflow: hidden;
  white-space: nowrap;
  border: none;
  margin: 0 0 5px 0;
  padding: 0;
}

.sd-container-view-outer {
  overflow: auto;
  margin: 5px;
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
}

.sd-container-view-outer.sd-panel-top {
  top: 44px;
}

.sd-container-view {
  overflow: hidden;
}

.sd-button-close {
  position: absolute;
  top: -12px;
  right: -12px;
  width: 20px;
  height: 20px;
  background-color: white;
  border: 1px solid grey;
  border-radius: 10px;
  text-align: center;
  font-size: 13px;
  line-height: 19px;
  box-shadow: 1px 1px 2px 0 rgba(50, 50, 50, 0.75);
  cursor: pointer;
  transition: all 200ms;
}

.sd-button-close:hover {
  background-color: #ececec;
}


/* Toolbar & buttons */
.sd-toolbar {
  float: right;
}

.sd-toolbar BUTTON {
  background-image: linear-gradient(#fcfcfc, #eee);
}

.sd-toolbar BUTTON:hover {
  background-image: linear-gradient(#eee, #ddd);
}

/* Button: round */
.sd-button-round,
.sd-button-round.sd-normal {
  background-color: #6490d5;
  padding: 4px 5px 4px 5px;
  border-radius: 16px;
  border: 1px solid #a5bacd;
  transition: all 200ms;
  line-height: normal;
}

.sd-button-round SPAN {
  color: white;
  text-shadow: none;
}

.sd-button-round.sd-small {
  padding: 2px 4px 2px 4px;
  border-radius: 12px;
}

.sd-button-round:hover {
  background-color: #94b6ec;
}

.sd-folder {
  background: url('/media/images/folder-root.png') 0px 0px no-repeat !important;
}

.sd-subfolder {
  background: url('/media/images/folder-sub.png') 0px 0px no-repeat !important;
}

.jstree LI.sd-active {
  border: 1px solid #ACDBB9;
}

.jstree LI.sd-active,
.jstree LI.sd-active > A.jstree-hovered {
  background-color: #E4FAE7;
  color: #396121;
  font-weight: bold;
}

.jstree LI.sd-active[aria-selected="true"],
.jstree LI.sd-active[aria-selected="true"] > A {
  background-color: #E4F4FA !important;
  color: #212C61 !important;
}

